--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "youtubei.js": "^13.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
